--- a/components/product/productList.hbs
+++ b/components/product/productList.hbs
@@ -6,9 +6,43 @@
                     <div class="shop-sidebar mb-4 mx-3">
                         <h3 class="shop-sidebar-heading px-4 fw-normal">Browse Categories</h3>
                         
+                        <div class="shop-sidebar-list p-4 bg-light">
+                            <form>
+                                <div class="shop-sidebar-type">
+                                    <div class="form-check mb-2">
+                                            <input class="form-check-input" type="radio" 
+                                            name="category" checked id='0' onclick="window.location='/product';">
+                                            <label class="form-check-label" for='0'>
+                                                All
+                                            </label>
+                                        </div>
+                                    {{#each category}}
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="radio" 
+                                            name="category" {{{radioChecked id ../catOption}}} 
+                                            id={{id}} onclick="window.location='?category={{id}}'">
+                                            
+                                            <label class="form-check-label" for={{id}}>
+                                                {{name}} ({{total_products}})
+                                            </label>
+                                        </div>
+                                    {{/each}}
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
+
                 <div class="col-xl-9 col-lg-8 col-md-7">
+                    <div class="bg-light mb-4 px-3 pb-3 d-flex align-items-center flex-wrap">
+                        
+                        <div class="mt-3">
+                            <input type="text" class="form-control" id="shop-search" placeholder="Search">
+                        </div>
+                    </div>
+                
+                
                     <div class="row">
                         {{#each products.rows}}
                         <div class="col-sm-6 col-lg-4">
