--- a/components/product/productDetail.hbs
+++ b/components/product/productDetail.hbs
@@ -29,29 +29,27 @@
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="text-detail">
-                            <input type="hidden" name="prodId" value={{detail.id}}>
                             <h3 class="name fw-bold my-2">{{detail.name}}</h3>
-                            <h4 id="price" class="price fw-bold my-2">{{currencyFormat detail.price}}</h4>
+                            <h4 class="price fw-bold my-2">{{currencyFormat detail.price}}</h4>
                             <p><span>Category: </span>{{detail.[category.name]}}</p>
                             <p><span>Availability: </span>In Stock</p>
-                            <p class="description my-5 py-4">{{detail.description}}</p>
-                            <div class="product-count mb-5 row">
-                                <div class="col-md-3">
-                                    <label for="qty" class="">Quantity</label>
-                                    <input type="number" class="form-control" id="qty" value="1" min="1" />
+                            <p class="description my-5 py-3">{{detail.description}}</p>
+                            <div class="product-count mb-5 d-flex align-items-center">
+                                <label for="qty" class="qty me-3">Quantity</label>
+                                <div class="d-flex border border-1">
+                                    <button
+                                        onclick="const result = document.getElementById('qty'); if(!isNaN(result.value) && result.value>0) result.value--;"><i
+                                            class="fas fa-minus"></i></button>
+                                    <input type="text" class="text-center border border-1" id="qty" value="0"
+                                        class="border border-1">
+                                    <button onclick="const result = document.getElementById('qty'); result.value++;"><i
+                                            class="fas fa-plus"></i></button>
                                 </div>
-                                <div class="col-md-3">
-                                    <label for="size" class="">Size</label>
-                                    <select id="size" class="form-select">
-                                        {{#each size }}
-                                        <option>{{size}}</option>
-                                        {{/each}}
-                                    </select>
-                                </div>
+                                <a href="#" class="rounded-pill ms-3">Add to Cart</a>
                             </div>
-                            <div class="">
-                                <a href="#" id="add-cart" class="rounded-pill btn py-3"><i
-                                        class="fas fa-shopping-cart me-3"></i>Add To Cart</a>
+                            <div class="favorite">
+                                <a href="#"><i class="far fa-gem mx-2"></i></a>
+                                <a href="#"><i class="far fa-heart"></i></a>
                             </div>
                         </div>
                     </div>
@@ -78,93 +76,105 @@
                     <div class="tab-pane active" id="description" role="tabpanel" aria-labelledby="description-tab">
                         <p class="mb-2">{{detail.description}}</p>
                     </div>
-                    <div class="tab-pane justfy-content-center" id="instock" role="tabpanel"
-                        aria-labelledby="instock-tab">
-                        <div class="offset-2 col-8">
-                            <table class="table">
-                                <thead>
-                                    <td>Size</td>
-                                    <td>Quantity</td>
-                                </thead>
-                                <tbody>
-                                    {{#each size}}
-                                    <tr>
-                                        <td>{{size}}</td>
-                                        <td>{{quantity}}</td>
-                                    </tr>
-                                    {{/each}}
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="tab-pane" id="instock" role="tabpanel" aria-labelledby="instock-tab">
+                        <table class="table">
+                            <thead>
+                                <td>Size</td>
+                                <td>Quantity</td>
+                            </thead>
+                            <tbody>
+                                {{#each size}}
+                                <tr>
+                                    <td>{{size}}</td>
+                                    <td>{{quantity}}</td>
+                                </tr>
+                                {{/each}}
+                            </tbody>
+                        </table>
                     </div>
                     <div class="tab-pane" id="review" role="tabpanel" aria-labelledby="review-tab">
                         <div class="row  justify-content-center">
                             <div class="col-lg-8">
                                 <div class="row mb-3">
-                                    <div class="col-12 overall text-center mb-2">
+                                    <div class="col-md-6 overall text-center mb-2">
                                         <h4 class="fw-bolder">Overall</h4>
                                         <h1>{{detail.rate}}</h1>
-                                        <p id="total-rate"></p>
+                                        <p>(03 Reviews)</p>
                                     </div>
-                                    {{!-- <div class="col-md-6 rate-overall">
+                                    <div class="col-md-6 rate">
                                         <h5 class="mb-2 col-12 text-center">Base on 3 Reviews</h5>
                                         <ul>
                                             <li>
-                                                <input type="hidden" class="rating" data-readonly value="5"
-                                                    data-filled="fas fa-star" data-empty="far fa-star" />
-                                                <span id="review-5" class="ms-3"></span>
+                                                5 Star
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                01
                                             </li>
                                             <li>
-                                                <input type="hidden" class="rating" data-readonly value="4"
-                                                    data-filled="fas fa-star" data-empty="far fa-star" />
-                                                <span id="review-4" class="ms-3"></span>
+                                                4 Star
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                01
                                             </li>
                                             <li>
-                                                <input type="hidden" class="rating" data-readonly value="3"
-                                                    data-filled="fas fa-star" data-empty="far fa-star" />
-                                                <span id="review-3" class="ms-3"></span>
+                                                3 Star
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                01
                                             </li>
                                             <li>
-                                                <input type="hidden" class="rating" data-readonly value="2"
-                                                    data-filled="fas fa-star" data-empty="far fa-star" />
-                                                <span id="review-2" class="ms-3"></span>
+                                                2 Star
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                01
                                             </li>
                                             <li>
-                                                <input type="hidden" class="rating" data-readonly value="1"
-                                                    data-filled="fas fa-star" data-empty="far fa-star" />
-                                                <span id="review-1" class="ms-3"></span>
+                                                1 Star
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                01
                                             </li>
                                         </ul>
-                                    </div> --}}
+                                    </div>
                                 </div>
-                                {{#if user}}
                                 <div class="add-rating my-3">
                                     <h2 class="mb-2">Add a review</h2>
-                                    <form class="review-form row">
+                                    <form class="review-form">
                                         <input type="hidden" value="{{detail.id}}" />
                                         <div class="form-group mb-3">
-                                            <label class="form-label" for="rate-form">Your Rating:</label>
-                                            <input type="hidden" name="rate" class="rating" value="5"
-                                                data-filled="fas fa-star fs-4" data-empty="far fa-star fs-4" />
+                                            <label class="form-label" for="rate-form">Your Rating:</label>                                            
+                                            <input class="form-control" type="number" min="1" max="5" value="5"
+                                                name="rate" id="rate-form"/>
                                         </div>
                                         <div class="form-group mb-3">
-                                            <label class="form-label" for="content-form">Your Review:</label>
+                                            <label class="form-label" for="content-form">Your Review:</label>                                            
                                             <input class="form-control" type="text" placeholder="Your review"
-                                                name="content" />
+                                                name="content"/>
                                         </div>
-                                        <div class="d-flex justify-content-end">
-                                            <input class="col-md-3 btn mb-2 text-uppercase" type="submit" id="submit-review"
-                                                value="Submit now" />
-                                        </div>
+                                        <input class="btn mb-2 text-uppercase p-2" type="submit"
+                                            id="submit-review" value="Submit now" />
                                     </form>
-                                </div>                                    
-                                {{/if}}
+                                </div>
                                 <div id="review-list">
                                 </div>
                                 <ul class="pagination justify-content-center">
                                 </ul>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -194,29 +204,5 @@
                 </div>
             </div>
         </section>
-    </div>
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="success-toast" class="toast align-items-center text-white bg-primary border-0" role="alert"
-            aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">
-                    Item has been added to cart.
-                </div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                    aria-label="Close"></button>
-            </div>
-        </div>
-    </div>
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="failed-toast" class="toast align-items-center text-white bg-danger border-0" role="alert"
-            aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">
-                    Can not add this item to cart.
-                </div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
-                    aria-label="Close"></button>
-            </div>
-        </div>
     </div>
 </main>
