Add, update & delete cart items

--- a/components/cart/cart.hbs
+++ b/components/cart/cart.hbs
@@ -8,8 +8,8 @@
                             <tr class=" table-primary">
                                 <th scope="col">Product</th>
                                 <th scope="col">Price</th>
-                                <th scope="col">Size</th>
                                 <th scope="col">Quantity</th>
+                                <th scope="col">Size</th>
                                 <th scope="col">Total</th>
                                 <th scope="col"></th>
                             </tr>
@@ -34,7 +34,7 @@
                                 <td>
                                     <div class="product_count">
                                         <input type="number" name="qty" value={{quantity}} title="Quantity:"
-                                            class="form-control">
+                                            class="form-control" min="1">
                                     </div>
                                 </td>
                                 <td class="size text-center">
