--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,7 @@
   {{/if}}
   <script type="text/javascript" src="/javascripts/boostrap-rating.js"></script>
   <script src="/javascripts/validator.js"></script>
+  <script src="/javascripts/searchProducts.js"></script>
   <title>{{title}}</title>
 </head>
 
