--- a/components/product/productList.hbs
+++ b/components/product/productList.hbs
@@ -7,11 +7,11 @@
                         <h3 class="shop-sidebar-heading px-4 fw-normal">Browse Categories</h3>
                         
                         <div class="shop-sidebar-list p-4 bg-light">
-                            <form>
+                            <form id="categoryForm">
                                 <div class="shop-sidebar-type">
                                     <div class="form-check mb-2">
                                             <input class="form-check-input" type="radio" 
-                                            name="category" checked id='0' onclick="window.location='/product';">
+                                            name="category" checked id='0' value="0" onclick="window.location='/product';">
                                             <label class="form-check-label" for='0'>
                                                 All
                                             </label>
@@ -20,7 +20,8 @@
                                         <div class="form-check mb-2">
                                             <input class="form-check-input" type="radio" 
                                             name="category" {{{radioChecked id ../catOption}}} 
-                                            id={{id}} onclick="window.location='?category={{id}}'">
+                                            id={{id}} onclick="window.location='?category={{id}}'" value="{{id}}">
+                                            {{!-- delete /search in url --}}
                                             <label class="form-check-label" for={{id}}>
                                                 {{name}} ({{total_products}})
                                             </label>
@@ -35,10 +36,10 @@
 
                 <div class="col-xl-9 col-lg-8 col-md-7">
                     <div class="bg-light mb-4 px-3 pb-3 d-flex align-items-center flex-wrap">
-                        <form action="/product/search" method="get">
+                        <form id="searchForm" action="/product/search" method="get">
                             <div class="mt-3 input-group">
                                 <input type="text" name="keyword" class="form-control" id="shop-search" placeholder="Search" value="{{keyword}}">
-                                <button type="submit" class="btn btn-outline-secondary">Search</button>
+                                <a href="javascript:void(0)" id="searchBtn" type="submit" class="btn btn-outline-secondary">Search</a>
                             </div>
                         </form>
                     </div>
