fix url category

--- a/components/product/productList.hbs
+++ b/components/product/productList.hbs
@@ -20,8 +20,8 @@
                                         <div class="form-check mb-2">
                                             <input class="form-check-input" type="radio" 
                                             name="category" {{{radioChecked id ../catOption}}} 
-                                            id={{id}} onclick="window.location='?category={{id}}'" value="{{id}}">
-                                            {{!-- delete /search in url --}}
+                                            id={{id}}   value="{{id}}">
+                                            {{!-- delete /search in url window.location='?category={{id}}'  --}} 
                                             <label class="form-check-label" for={{id}}>
                                                 {{name}} ({{total_products}})
                                             </label>
