fix find product

--- a/components/product/productList.hbs
+++ b/components/product/productList.hbs
@@ -36,9 +36,9 @@
 
                 <div class="col-xl-9 col-lg-8 col-md-7">
                     <div class="bg-light mb-4 px-3 pb-3 d-flex align-items-center flex-wrap">
-                        <form id="searchForm" action="/product/search" method="get">
+                        <form id="searchForm" action="/product" method="get">
                             <div class="mt-3 input-group">
-                                <input type="text" name="keyword" class="form-control" id="shop-search" placeholder="Search" value="{{keyword}}">
+                                <input autocomplete="off" type="text" name="keyword" class="form-control" id="shop-search" placeholder="Search" value="{{keyword}}">
                                 <a href="javascript:void(0)" id="searchBtn" type="submit" class="btn btn-outline-secondary">Search</a>
                             </div>
                         </form>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="offset-xl-3 offset-lg-4 offset-md-5 col-xl-9 col-lg-8 col-md-7 page-nav d-flex justify-content-center">
                     <ul class="d-flex">
-                        {{#page products.count.length page catOption}}
+                        {{#page products.count.length page url}}
                         {{/page}}
                     </ul>
                 </div>
