fix max length reiview, special character

--- a/components/product/productDetail.hbs
+++ b/components/product/productDetail.hbs
@@ -208,11 +208,23 @@
         </div>
     </div>
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="failed-toast" class="toast align-items-center text-white bg-danger border-0" role="alert"
+        <div id="review-length-noti-toast" class="toast align-items-center text-white bg-primary border-0" role="alert"
             aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
                 <div class="toast-body">
-                    Can not add this item to cart.
+                    Your review cannot exceed 255 characters.
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                    aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="review-special-char-toast" class="toast align-items-center text-white bg-danger border-0" role="alert"
+            aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body">
+                    Your reivew has special characters. 
                 </div>
                 <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
                     aria-label="Close"></button>
